feat: Add notification partial view

--- a/LibraryManagementApp/Views/Author/Create.cshtml
+++ b/LibraryManagementApp/Views/Author/Create.cshtml
@@ -23,7 +23,7 @@
                         <div class="form-group mb-3">
                             <strong><label asp-for="Name" class="form-label"></label></strong>
                             <input asp-for="Name" type="text" class="form-control" placeholder="Ingrese el nombre del autor"/>
-                            <span asp-validation-for="Name" class="bg-danger text-light px-2"></span>
+                            <span asp-validation-for="Name" class="text-danger px-2"></span>
                         </div>
                     </div>
                 </div>
